// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IstioComponentStatus renders error icon when core component is not found 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_f1h37jb8"
        >
          <ExclamationCircleIcon />
        </Icon>
      }
    >
      Not found
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders error icon when core component is not running 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_f1h37jb8"
        >
          <ExclamationCircleIcon />
        </Icon>
      }
    >
      Not healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders minus icon when addon component is not ready 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-addon"
  >
    <SplitItem
      isFilled={true}
    >
      addon
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_f1elceoh"
        >
          <MinusCircleIcon />
        </Icon>
      }
    >
      Not ready
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders minus icon when core component is not ready 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-core"
  >
    <SplitItem
      isFilled={true}
    >
      core
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_f1elceoh"
        >
          <MinusCircleIcon />
        </Icon>
      }
    >
      Not ready
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders success icon when core component is running 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-isito-ingress"
  >
    <SplitItem
      isFilled={true}
    >
      isito-ingress
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_f1r5cf3w"
        >
          <CheckCircleIcon />
        </Icon>
      }
    >
      Healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders success icon when core component is running 2`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_f1r5cf3w"
        >
          <CheckCircleIcon />
        </Icon>
      }
    >
      Healthy
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders warning icon when core component is not found 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_frkkrth"
        >
          <ExclamationTriangleIcon />
        </Icon>
      }
    >
      Not found
    </Label>
  </Split>
</Fragment>
`;

exports[`IstioComponentStatus renders warning icon when core component is not running 1`] = `
<Fragment>
  <Split
    className="kiali_f14xnozi"
    hasGutter={true}
    key="cell-status-icon-prometheus"
  >
    <SplitItem
      isFilled={true}
    >
      prometheus
    </SplitItem>
    <Label
      className="kiali_f1hw2p41"
      color="blue"
      data-test="component-status-icon"
      icon={
        <Icon
          className="kiali_fi2mdky kiali_frkkrth"
        >
          <ExclamationTriangleIcon />
        </Icon>
      }
    >
      Not healthy
    </Label>
  </Split>
</Fragment>
`;
